[tool.poetry]
name = "collector-sed"
version = "0.1.0"
description = ""
authors = ["Alex <alexpwebber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
dash = "^2.17.0"
plotly = "^5.22.0"
pandas = "^2.2.2"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
